[package]
name = "schedule"
version = "0.2.0-pre"
description = "An in-process scheduler for periodic jobs. Schedule lets you run Rust functions on a cron-like schedule."
authors = ["Ryan Leckey <leckey.ryan@gmail.com>"]
homepage = "https://github.com/mehcode/schedule-rs"
repository = "https://github.com/mehcode/schedule-rs"
documentation = "https://docs.rs/schedule"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["schedule", "cron", "job", "periodic"]

[dependencies]
cron = { git = "https://github.com/mehcode/cron", branch = "error-chain" }
error-chain = "0.10.0"
chrono = "0.3.0"
time = "0.1"
